fix modal z-index

--- a/app/(dashboard)/project/[id]/page.module.scss
+++ b/app/(dashboard)/project/[id]/page.module.scss
@@ -6,7 +6,6 @@
   width: 100%;
   padding: 0 1rem;
   margin-bottom: 1rem;
-  overflow: hidden;
   & > div {
     height: 92%;
     position: relative;
